fixed gap in navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -94,7 +94,7 @@
     padding: 50px 0;
     background-color: var(--dark-grey-color);
     position: fixed;
-    top: 55px;
+    top: 50px;
     right: -100%;
     opacity: 0;
 
